--- a/notebooks/5_comparing_magnifications/3.0_20x_dw.export_matching.global_thr.ipynb
+++ b/notebooks/5_comparing_magnifications/3.0_20x_dw.export_matching.global_thr.ipynb
@@ -109,11 +109,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:04<00:00,  1.62it/s]\n"
+      "100%|██████████| 7/7 [00:04<00:00,  1.68it/s]\n"
      ]
     }
    ],
    "source": [
+    "all_20x_dots: List[pd.DataFrame] = []\n",
     "selected_20x_dots: List[pd.DataFrame] = []\n",
     "for current_field_id in tqdm(np.unique(dots_data[\"sid\"])):\n",
     "    dot_max_z_proj = tifffile.imread(os.path.join(dot_image_folder_path, f\"a647_{current_field_id:03d}.tif\")).max(0)\n",
@@ -137,6 +138,7 @@
     "    matched_60x_dots = matched_dots.loc[matched_dots[\"series\"] == current_field_id, \"id_60x\"].values\n",
     "    max_match_dist = matched_dots.loc[matched_dots[\"series\"] == current_field_id, \"eudist\"].max()\n",
     "\n",
+    "    all_20x_dots.append(dots.loc[dw__thr <= dots[\"Value2\"], :])\n",
     "    selected_20x_dots.append(dots.loc[matched_20x_dots, :])"
    ]
   },
@@ -146,9 +148,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pd.concat(all_20x_dots).reset_index(\n",
+    "    drop=True).to_csv(os.path.join(\"../../data/magnifications_matching\",\n",
+    "                                   f\"{selected_magnification}_{selected_image_type}.global_thr.all.tsv\"),\n",
+    "                      sep=\"\\t\", index=False)\n",
     "pd.concat(selected_20x_dots).reset_index(\n",
     "    drop=True).to_csv(os.path.join(\"../../data/magnifications_matching\",\n",
-    "                                   f\"{selected_magnification}_{selected_image_type}.global_thr.tsv\"),\n",
+    "                                   f\"{selected_magnification}_{selected_image_type}.global_thr.selected.tsv\"),\n",
     "                      sep=\"\\t\", index=False)"
    ]
   }
