--- a/notebooks/4_reference_dots_from_60x/3.1_export_reference.field_thr.ipynb
+++ b/notebooks/4_reference_dots_from_60x/3.1_export_reference.field_thr.ipynb
@@ -61,9 +61,7 @@
    "source": [
     "ref_raw = dots_data2.loc[\"raw\" == dots_data2[\"image_type\"], :].reset_index(drop=True)\n",
     "ref__dw = dots_data2.loc[\"dw\" == dots_data2[\"image_type\"], :].reset_index(drop=True)\n",
-    "field_list = np.unique(dots_data2[\"sid\"].values).tolist()\n",
-    "raw_thr = 0.15\n",
-    "dw__thr = 5.3"
+    "field_list = np.unique(dots_data2[\"sid\"].values).tolist()"
    ]
   },
   {
@@ -86,6 +84,8 @@
     }
    ],
    "source": [
+    "all_raw_dots: List[pd.DataFrame] = []\n",
+    "all_dw__dots: List[pd.DataFrame] = []\n",
     "selected_raw_dots: List[pd.DataFrame] = []\n",
     "selected_dw__dots: List[pd.DataFrame] = []\n",
     "for current_field_id in field_list:\n",
@@ -100,8 +100,12 @@
     "    matched_raw_dots = matched_dots.loc[matched_dots[\"series\"] == current_field_id, \"raw_id\"].values\n",
     "    matched_dw__dots = matched_dots.loc[matched_dots[\"series\"] == current_field_id, \"dw__id\"].values\n",
     "    \n",
-    "    selected_raw_dots.append(field_raw_dots.loc[field_raw_dots[\"Value2\"] >= raw_thr, :].reset_index(drop=True).iloc[matched_raw_dots, :])\n",
-    "    selected_dw__dots.append(field_dw__dots.loc[field_dw__dots[\"Value2\"] >= dw__thr, :].reset_index(drop=True).iloc[matched_dw__dots, :])"
+    "    all_raw_dots.append(field_raw_dots.loc[field_raw_dots[\"Value2\"] >= raw_thr, :].reset_index(drop=True))\n",
+    "    all_dw__dots.append(field_dw__dots.loc[field_dw__dots[\"Value2\"] >= dw__thr, :].reset_index(drop=True))\n",
+    "    selected_raw_dots.append(field_raw_dots.loc[field_raw_dots[\"Value2\"] >= raw_thr, :].reset_index(\n",
+    "        drop=True).iloc[matched_raw_dots, :])\n",
+    "    selected_dw__dots.append(field_dw__dots.loc[field_dw__dots[\"Value2\"] >= dw__thr, :].reset_index(\n",
+    "        drop=True).iloc[matched_dw__dots, :])"
    ]
   },
   {
@@ -110,6 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pd.concat(all_raw_dots).reset_index(drop=True).to_csv(\"../../data/60x_reference/raw.field_thr.tsv\", sep=\"\\t\", index=False)\n",
     "pd.concat(selected_raw_dots).reset_index(drop=True).to_csv(\"../../data/60x_reference/ref_raw.field_thr.tsv\", sep=\"\\t\", index=False)"
    ]
   },
@@ -119,6 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pd.concat(all_dw__dots).reset_index(drop=True).to_csv(\"../../data/60x_reference/dw.field_thr.tsv\", sep=\"\\t\", index=False)\n",
     "pd.concat(selected_dw__dots).reset_index(drop=True).to_csv(\"../../data/60x_reference/ref__dw.field_thr.tsv\", sep=\"\\t\", index=False)"
    ]
   }
