--- a/notebooks/5_comparing_magnifications/3.1_20x_dw.export_matching.field_thr.ipynb
+++ b/notebooks/5_comparing_magnifications/3.1_20x_dw.export_matching.field_thr.ipynb
@@ -117,11 +117,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:04<00:00,  1.69it/s]\n"
+      "100%|██████████| 7/7 [00:04<00:00,  1.60it/s]\n"
      ]
     }
    ],
    "source": [
+    "all_20x_dots: List[pd.DataFrame] = []\n",
     "selected_20x_dots: List[pd.DataFrame] = []\n",
     "for current_field_id in tqdm(np.unique(dots_data[\"sid\"])):\n",
     "    thresholds = thresholds_table.loc[current_field_id == thresholds_table[\"sid\"], :]\n",
@@ -148,6 +149,7 @@
     "    matched_60x_dots = matched_dots.loc[matched_dots[\"series\"] == current_field_id, \"id_60x\"].values\n",
     "    max_match_dist = matched_dots.loc[matched_dots[\"series\"] == current_field_id, \"eudist\"].max()\n",
     "\n",
+    "    all_20x_dots.append(dots.loc[intensity_thr <= dots[\"Value2\"], :])\n",
     "    selected_20x_dots.append(dots.loc[matched_20x_dots, :])"
    ]
   },
@@ -157,9 +159,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pd.concat(all_20x_dots).reset_index(\n",
+    "    drop=True).to_csv(os.path.join(\"../../data/magnifications_matching\",\n",
+    "                                   f\"{selected_magnification}_{selected_image_type}.field_thr.all.tsv\"),\n",
+    "                      sep=\"\\t\", index=False)\n",
     "pd.concat(selected_20x_dots).reset_index(\n",
     "    drop=True).to_csv(os.path.join(\"../../data/magnifications_matching\",\n",
-    "                                   f\"{selected_magnification}_{selected_image_type}.field_thr.tsv\"),\n",
+    "                                   f\"{selected_magnification}_{selected_image_type}.field_thr.selected.tsv\"),\n",
     "                      sep=\"\\t\", index=False)"
    ]
   }
