--- a/notebooks/manuscript/2_figures.ipynb
+++ b/notebooks/manuscript/2_figures.ipynb
@@ -123,6 +123,7 @@
    "outputs": [],
    "source": [
     "ggsave(plot=p, file=\"figures/fig_3.png\", width=16, height=8)\n",
+    "ggsave(plot=p, file=\"figures/fig_3.jpg\", width=16, height=8)\n",
     "saveRDS(p, \"figures/fig_3.rds\")"
    ]
   },
@@ -197,6 +198,7 @@
    "outputs": [],
    "source": [
     "ggsave(plot=p, file=\"figures/supp_fig_x1.png\", width=16, height=8)\n",
+    "ggsave(plot=p, file=\"figures/supp_fig_x1.jpg\", width=16, height=8)\n",
     "saveRDS(p, \"figures/supp_fig_x1.rds\")"
    ]
   }
