removed figure RDSs

--- a/notebooks/manuscript/2_figures.ipynb
+++ b/notebooks/manuscript/2_figures.ipynb
@@ -123,8 +123,7 @@
    "outputs": [],
    "source": [
     "ggsave(plot=p, file=\"figures/fig_3.png\", width=16, height=8)\n",
-    "ggsave(plot=p, file=\"figures/fig_3.jpg\", width=16, height=8)\n",
-    "saveRDS(p, \"figures/fig_3.rds\")"
+    "ggsave(plot=p, file=\"figures/fig_3.jpg\", width=16, height=8)"
    ]
   },
   {
@@ -198,8 +197,7 @@
    "outputs": [],
    "source": [
     "ggsave(plot=p, file=\"figures/supp_fig_x1.png\", width=16, height=8)\n",
-    "ggsave(plot=p, file=\"figures/supp_fig_x1.jpg\", width=16, height=8)\n",
-    "saveRDS(p, \"figures/supp_fig_x1.rds\")"
+    "ggsave(plot=p, file=\"figures/supp_fig_x1.jpg\", width=16, height=8)"
    ]
   }
  ],
