Fixed background color.

--- a/notebooks/manuscript/2_figures.ipynb
+++ b/notebooks/manuscript/2_figures.ipynb
@@ -122,8 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(plot=p, file=\"figures/fig_3.png\", width=16, height=8)\n",
-    "ggsave(plot=p, file=\"figures/fig_3.jpg\", width=16, height=8)"
+    "ggsave(plot=p, file=\"figures/fig_3.png\", width=16, height=8, bg=\"white\")\n",
+    "ggsave(plot=p, file=\"figures/fig_3.jpg\", width=16, height=8, bg=\"white\")"
    ]
   },
   {
@@ -196,8 +196,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(plot=p, file=\"figures/supp_fig_x1.png\", width=16, height=8)\n",
-    "ggsave(plot=p, file=\"figures/supp_fig_x1.jpg\", width=16, height=8)"
+    "ggsave(plot=p, file=\"figures/supp_fig_x1.png\", width=16, height=8, bg=\"white\")\n",
+    "ggsave(plot=p, file=\"figures/supp_fig_x1.jpg\", width=16, height=8, bg=\"white\")"
    ]
   }
  ],
