--- a/notebooks/5.1_overlap_noise_removal/1_run.ipynb
+++ b/notebooks/5.1_overlap_noise_removal/1_run.ipynb
@@ -68,7 +68,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:19<00:00,  2.79s/it]\n"
+      "100%|██████████| 7/7 [00:17<00:00,  2.53s/it]\n"
      ]
     }
    ],
@@ -526,6 +526,201 @@
     "cleaned_df.to_csv(os.path.join(\"../../data/magnifications_matching\", \n",
     "                                   f\"20x_raw.field_thr.cleaned.all.tsv\"\n",
     "                                  ), sep=\"\\t\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>level_0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>sid</th>\n",
+       "      <th>nid</th>\n",
+       "      <th>size</th>\n",
+       "      <th>dilated_size</th>\n",
+       "      <th>scaling</th>\n",
+       "      <th>magnification</th>\n",
+       "      <th>image_type</th>\n",
+       "      <th>Channel</th>\n",
+       "      <th>...</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>FWHM</th>\n",
+       "      <th>SNR</th>\n",
+       "      <th>NSNR</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>SNR2</th>\n",
+       "      <th>Value2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10216</th>\n",
+       "      <td>198</td>\n",
+       "      <td>14106</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1674</td>\n",
+       "      <td>5300</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20x</td>\n",
+       "      <td>raw</td>\n",
+       "      <td>a647</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11.928</td>\n",
+       "      <td>515.867</td>\n",
+       "      <td>49.036</td>\n",
+       "      <td>0.169</td>\n",
+       "      <td>2.871</td>\n",
+       "      <td>1.155</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.739411</td>\n",
+       "      <td>0.169</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       level_0  index  sid  nid  size  dilated_size  scaling magnification  \\\n",
+       "10216      198  14106    6    5  1674          5300      1.0           20x   \n",
+       "\n",
+       "      image_type Channel  ...       x        y       z  Value   FWHM    SNR  \\\n",
+       "10216        raw    a647  ...  11.928  515.867  49.036  0.169  2.871  1.155   \n",
+       "\n",
+       "       NSNR  Label      SNR2  Value2  \n",
+       "10216  -1.0      0  1.739411   0.169  \n",
+       "\n",
+       "[1 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_df.loc[cleaned_df[\"x\"] == 11.928]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sid</th>\n",
+       "      <th>nid</th>\n",
+       "      <th>size</th>\n",
+       "      <th>dilated_size</th>\n",
+       "      <th>scaling</th>\n",
+       "      <th>magnification</th>\n",
+       "      <th>image_type</th>\n",
+       "      <th>Channel</th>\n",
+       "      <th>Nuclei</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>FWHM</th>\n",
+       "      <th>SNR</th>\n",
+       "      <th>NSNR</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>SNR2</th>\n",
+       "      <th>Value2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14106</th>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1674</td>\n",
+       "      <td>5300</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20x</td>\n",
+       "      <td>raw</td>\n",
+       "      <td>a647</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11.928</td>\n",
+       "      <td>515.867</td>\n",
+       "      <td>49.036</td>\n",
+       "      <td>0.169</td>\n",
+       "      <td>2.871</td>\n",
+       "      <td>1.155</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.739411</td>\n",
+       "      <td>0.169</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       sid  nid  size  dilated_size  scaling magnification image_type Channel  \\\n",
+       "14106    6    5  1674          5300      1.0           20x        raw    a647   \n",
+       "\n",
+       "       Nuclei       x        y       z  Value   FWHM    SNR  NSNR  Label  \\\n",
+       "14106       0  11.928  515.867  49.036  0.169  2.871  1.155  -1.0      0   \n",
+       "\n",
+       "           SNR2  Value2  \n",
+       "14106  1.739411   0.169  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_raw.loc[data_raw[\"x\"] == 11.928]"
    ]
   }
  ],
