Re-ran dot assembly and filter

--- a/notebooks/3_assembling_and_filtering_dots/1.1_compare_with_new_values.ipynb
+++ b/notebooks/3_assembling_and_filtering_dots/1.1_compare_with_new_values.ipynb
@@ -9,12 +9,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading required package: data.table\n",
-      "\n",
       "Loading required package: pbapply\n",
       "\n",
       "Loading required package: ggplot2\n",
       "\n",
+      "Warning message:\n",
+      "“replacing previous import ‘vctrs::data_frame’ by ‘tibble::data_frame’ when loading ‘dplyr’”\n",
       "Loading required package: cowplot\n",
       "\n",
       "\n",
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
