Re-ran magnifications comparison

--- a/notebooks/5.0_comparing_magnifications/0.0_20x.overlays.global_thr.ipynb
+++ b/notebooks/5.0_comparing_magnifications/0.0_20x.overlays.global_thr.ipynb
@@ -74,7 +74,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   4%|▍         | 7/180 [00:00<00:03, 56.04it/s]"
+      "nucleus:   4%|▍         | 7/180 [00:00<00:02, 59.05it/s]"
      ]
     },
     {
@@ -90,7 +90,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 180/180 [00:05<00:00, 35.25it/s]\n"
+      "nucleus: 100%|██████████| 180/180 [00:03<00:00, 51.69it/s]\n"
      ]
     },
     {
@@ -105,7 +105,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   2%|▏         | 5/208 [00:00<00:04, 42.10it/s]"
+      "nucleus:   4%|▍         | 8/208 [00:00<00:02, 68.89it/s]"
      ]
     },
     {
@@ -121,7 +121,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 208/208 [00:11<00:00, 17.68it/s]\n"
+      "nucleus: 100%|██████████| 208/208 [00:05<00:00, 36.01it/s]\n"
      ]
     },
     {
@@ -136,7 +136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   4%|▍         | 7/156 [00:00<00:02, 58.56it/s]"
+      "nucleus:   5%|▌         | 8/156 [00:00<00:02, 70.87it/s]"
      ]
     },
     {
@@ -152,7 +152,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 156/156 [00:06<00:00, 24.76it/s]\n"
+      "nucleus: 100%|██████████| 156/156 [00:02<00:00, 55.36it/s]\n"
      ]
     },
     {
@@ -167,7 +167,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   2%|▏         | 4/172 [00:00<00:04, 37.36it/s]"
+      "nucleus:   3%|▎         | 6/172 [00:00<00:02, 58.91it/s]"
      ]
     },
     {
@@ -183,7 +183,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 172/172 [00:05<00:00, 28.94it/s]\n"
+      "nucleus: 100%|██████████| 172/172 [00:03<00:00, 52.23it/s]\n"
      ]
     },
     {
@@ -198,7 +198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   2%|▏         | 7/342 [00:00<00:04, 67.06it/s]"
+      "nucleus:   3%|▎         | 7/211 [00:00<00:02, 68.82it/s]"
      ]
     },
     {
@@ -214,7 +214,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 342/342 [00:10<00:00, 31.30it/s] \n"
+      "nucleus: 100%|██████████| 211/211 [00:04<00:00, 43.06it/s]\n"
      ]
     },
     {
@@ -229,7 +229,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   2%|▏         | 5/210 [00:00<00:04, 49.67it/s]"
+      "nucleus:   3%|▎         | 6/210 [00:00<00:03, 54.26it/s]"
      ]
     },
     {
@@ -245,7 +245,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 210/210 [00:06<00:00, 31.17it/s]\n"
+      "nucleus: 100%|██████████| 210/210 [00:04<00:00, 46.08it/s]\n"
      ]
     },
     {
@@ -260,7 +260,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus:   2%|▏         | 5/221 [00:00<00:04, 46.81it/s]"
+      "nucleus:   4%|▎         | 8/221 [00:00<00:02, 74.75it/s]"
      ]
     },
     {
@@ -276,7 +276,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "nucleus: 100%|██████████| 221/221 [00:08<00:00, 27.08it/s]\n"
+      "nucleus: 100%|██████████| 221/221 [00:05<00:00, 44.03it/s]\n"
      ]
     },
     {
