--- a/notebooks/5.0_comparing_magnifications/1.0_20x_raw.matching_reference.global_thr.ipynb
+++ b/notebooks/5.0_comparing_magnifications/1.0_20x_raw.matching_reference.global_thr.ipynb
@@ -128,51 +128,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration #...1...2...3...4...5...6"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 14%|█▍        | 1/7 [00:03<00:18,  3.03s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...7\n",
-      "Iteration #...1...2...3...4...5...6...7...8"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 29%|██▊       | 2/7 [00:10<00:21,  4.22s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 43%|████▎     | 3/7 [00:12<00:15,  3.77s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
       "Iteration #...1...2...3...4...5...6...7"
      ]
     },
@@ -180,7 +135,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 57%|█████▋    | 4/7 [00:16<00:11,  3.89s/it]"
+      " 14%|█▍        | 1/7 [00:01<00:07,  1.28s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Iteration #...1...2...3...4...5...6...7...8"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 29%|██▊       | 2/7 [00:03<00:08,  1.68s/it]"
      ]
     },
     {
@@ -195,7 +165,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|███████▏  | 5/7 [00:27<00:11,  6.00s/it]"
+      " 43%|████▎     | 3/7 [00:04<00:06,  1.50s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...11...12\n",
+      "Iteration #...1...2...3...4...5...6...7"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 57%|█████▋    | 4/7 [00:06<00:04,  1.55s/it]"
      ]
     },
     {
@@ -203,36 +188,51 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14"
+      "Iteration #...1...2...3...4...5...6...7...8...9...10"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|████████▌ | 6/7 [00:29<00:04,  4.76s/it]"
+      " 71%|███████▏  | 5/7 [00:10<00:04,  2.34s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...15...16\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14...15...16...17...18...19...20...21"
+      "\n",
+      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:30<00:00,  4.41s/it]"
+      " 86%|████████▌ | 6/7 [00:11<00:01,  1.87s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "...14...15...16\n",
+      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14...15"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7/7 [00:12<00:00,  1.72s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...16...17...18...19...20...21...22...23\n"
      ]
     },
     {
@@ -285,9 +285,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6447/15695 (41.08%) 20x dots matched to 60x\n",
-      "6447/9440 (68.29%) 60x dots matched to 20x\n",
-      "2993 (19.07% 20x, 31.71% 60x) dots matched with distance > 9\n"
+      "6447/15685 (41.10%) 20x dots matched to 60x\n",
+      "6447/9439 (68.30%) 60x dots matched to 20x\n",
+      "2992 (19.08% 20x, 31.70% 60x) dots matched with distance > 9\n"
      ]
     }
    ],
@@ -337,14 +337,14 @@
       "    1178 (29.78% 20x, 49.00% 60x) dots matched with distance > 9\n",
       "    \n",
       "Field #6\n",
-      "    477/1105 (43.17%) 20x dots matched to 60x\n",
+      "    477/1101 (43.32%) 20x dots matched to 60x\n",
       "    477/691 (69.03%) 60x dots matched to 20x\n",
-      "    214 (19.37% 20x, 30.97% 60x) dots matched with distance > 9\n",
+      "    214 (19.44% 20x, 30.97% 60x) dots matched with distance > 9\n",
       "    \n",
       "Field #7\n",
-      "    118/595 (19.83%) 20x dots matched to 60x\n",
-      "    118/523 (22.56%) 60x dots matched to 20x\n",
-      "    405 (68.07% 20x, 77.44% 60x) dots matched with distance > 9\n",
+      "    118/589 (20.03%) 20x dots matched to 60x\n",
+      "    118/522 (22.61%) 60x dots matched to 20x\n",
+      "    404 (68.59% 20x, 77.39% 60x) dots matched with distance > 9\n",
       "    \n"
      ]
     }
@@ -378,7 +378,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6329/15100 (41.91%) 20x dots matched to 60x\n",
+      "6329/15096 (41.93%) 20x dots matched to 60x\n",
       "6329/8917 (70.98%) 60x dots matched to 20x\n",
       "2588 (17.14% 20x, 29.02% 60x) dots matched with distance > 9\n"
      ]
