--- a/notebooks/5.0_comparing_magnifications/1.1_20x_dw.matching_reference.field_thr.ipynb
+++ b/notebooks/5.0_comparing_magnifications/1.1_20x_dw.matching_reference.field_thr.ipynb
@@ -136,6 +136,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 14%|█▍        | 1/7 [00:00<00:03,  1.85it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...14\n",
       "Iteration #...1...2...3...4...5...6...7...8...9...10...11"
      ]
     },
@@ -143,22 +158,52 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 1/7 [00:01<00:10,  1.69s/it]"
+      " 29%|██▊       | 2/7 [00:01<00:03,  1.61it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...12...13...14\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12"
+      "...12\n",
+      "Iteration #...1...2"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 29%|██▊       | 2/7 [00:03<00:08,  1.74s/it]"
+      " 43%|████▎     | 3/7 [00:01<00:02,  1.92it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...3...4...5...6...7...8...9...10\n",
+      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14...15...16...17"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 57%|█████▋    | 4/7 [00:02<00:01,  1.65it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...18...19\n",
+      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14...15"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 71%|███████▏  | 5/7 [00:03<00:01,  1.15it/s]"
      ]
     },
     {
@@ -166,88 +211,29 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10"
+      "Iteration #...1...2...3...4...5...6...7"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|████▎     | 3/7 [00:04<00:05,  1.49s/it]"
+      "100%|██████████| 7/7 [00:04<00:00,  1.91it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14...15...16...17...18...19"
+      "...8...9...10...11\n",
+      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 57%|█████▋    | 4/7 [00:07<00:05,  1.84s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 71%|███████▏  | 5/7 [00:11<00:05,  2.54s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...15\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 86%|████████▌ | 6/7 [00:12<00:02,  2.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...11...12...13...14...15...16\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 7/7 [00:12<00:00,  1.78s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 7/7 [00:04<00:00,  1.62it/s]\n"
      ]
     }
    ],
@@ -296,9 +282,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7036/8768 (80.25%) 20x dots matched to 60x\n",
-      "7036/9948 (70.73%) 60x dots matched to 20x\n",
-      "1703 (19.42% 20x, 17.12% 60x) dots matched with distance > 9\n"
+      "7035/8734 (80.55%) 20x dots matched to 60x\n",
+      "7035/9944 (70.75%) 60x dots matched to 20x\n",
+      "1670 (19.12% 20x, 16.79% 60x) dots matched with distance > 9\n"
      ]
     }
    ],
@@ -348,14 +334,14 @@
       "    423 (18.71% 20x, 17.12% 60x) dots matched with distance > 9\n",
       "    \n",
       "Field #6\n",
-      "    516/691 (74.67%) 20x dots matched to 60x\n",
-      "    516/870 (59.31%) 60x dots matched to 20x\n",
-      "    175 (25.33% 20x, 20.11% 60x) dots matched with distance > 9\n",
+      "    516/664 (77.71%) 20x dots matched to 60x\n",
+      "    516/869 (59.38%) 60x dots matched to 20x\n",
+      "    148 (22.29% 20x, 17.03% 60x) dots matched with distance > 9\n",
       "    \n",
       "Field #7\n",
-      "    207/313 (66.13%) 20x dots matched to 60x\n",
-      "    207/904 (22.90%) 60x dots matched to 20x\n",
-      "    106 (33.87% 20x, 11.73% 60x) dots matched with distance > 9\n",
+      "    206/306 (67.32%) 20x dots matched to 60x\n",
+      "    206/901 (22.86%) 60x dots matched to 20x\n",
+      "    100 (32.68% 20x, 11.10% 60x) dots matched with distance > 9\n",
       "    \n"
      ]
     }
@@ -389,9 +375,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6829/8455 (80.77%) 20x dots matched to 60x\n",
-      "6829/9044 (75.51%) 60x dots matched to 20x\n",
-      "1597 (18.89% 20x, 17.66% 60x) dots matched with distance > 9\n"
+      "6829/8428 (81.03%) 20x dots matched to 60x\n",
+      "6829/9043 (75.52%) 60x dots matched to 20x\n",
+      "1570 (18.63% 20x, 17.36% 60x) dots matched with distance > 9\n"
      ]
     }
    ],
