--- a/notebooks/5.0_comparing_magnifications/1.1_20x_raw.matching_reference.field_thr.ipynb
+++ b/notebooks/5.0_comparing_magnifications/1.1_20x_raw.matching_reference.field_thr.ipynb
@@ -143,7 +143,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 1/7 [00:02<00:14,  2.49s/it]"
+      " 14%|█▍        | 1/7 [00:00<00:05,  1.02it/s]"
      ]
     },
     {
@@ -151,14 +151,29 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Iteration #...1...2...3...4...5...6...7...8"
+      "Iteration #...1...2...3...4...5...6...7"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 29%|██▊       | 2/7 [00:08<00:17,  3.56s/it]"
+      " 29%|██▊       | 2/7 [00:03<00:07,  1.42s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...8\n",
+      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 43%|████▎     | 3/7 [00:04<00:05,  1.43s/it]"
      ]
     },
     {
@@ -166,21 +181,6 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 43%|████▎     | 3/7 [00:13<00:15,  3.88s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...13\n",
       "Iteration #...1...2...3...4...5...6"
      ]
     },
@@ -188,7 +188,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 57%|█████▋    | 4/7 [00:18<00:12,  4.29s/it]"
+      " 57%|█████▋    | 4/7 [00:06<00:04,  1.56s/it]"
      ]
     },
     {
@@ -196,51 +196,50 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11"
+      "Iteration #...1...2...3...4...5...6...7...8...9...10"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|███████▏  | 5/7 [00:30<00:13,  6.53s/it]"
+      " 71%|███████▏  | 5/7 [00:10<00:04,  2.33s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14...15...16...17...18...19...20...21...22...23...24...25...26...27...28...29...30...31...32...33...34...35...36...37...38...39...40...41...42...43...44...45...46...47...48...49"
+      "...11\n",
+      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14...15...16...17...18...19...20...21...22...23...24...25...26...27...28...29...30...31...32...33...34...35...36...37...38...39...40...41...42...43...44...45"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 86%|████████▌ | 6/7 [00:35<00:06,  6.15s/it]"
+      " 86%|████████▌ | 6/7 [00:12<00:02,  2.11s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14"
+      "...46...47...48...49\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:36<00:00,  5.19s/it]"
+      "100%|██████████| 7/7 [00:12<00:00,  1.82s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...15\n"
+      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14...15\n"
      ]
     },
     {
@@ -296,9 +295,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6433/15385 (41.81%) 20x dots matched to 60x\n",
-      "6433/9948 (64.67%) 60x dots matched to 20x\n",
-      "3048 (19.81% 20x, 30.64% 60x) dots matched with distance > 9\n"
+      "6433/15377 (41.84%) 20x dots matched to 60x\n",
+      "6433/9944 (64.69%) 60x dots matched to 20x\n",
+      "3043 (19.79% 20x, 30.60% 60x) dots matched with distance > 9\n"
      ]
     }
    ],
@@ -348,14 +347,14 @@
       "    1245 (32.64% 20x, 50.38% 60x) dots matched with distance > 9\n",
       "    \n",
       "Field #6\n",
-      "    501/1040 (48.17%) 20x dots matched to 60x\n",
-      "    501/870 (57.59%) 60x dots matched to 20x\n",
-      "    369 (35.48% 20x, 42.41% 60x) dots matched with distance > 9\n",
+      "    501/1036 (48.36%) 20x dots matched to 60x\n",
+      "    501/869 (57.65%) 60x dots matched to 20x\n",
+      "    368 (35.52% 20x, 42.35% 60x) dots matched with distance > 9\n",
       "    \n",
       "Field #7\n",
-      "    129/437 (29.52%) 20x dots matched to 60x\n",
-      "    129/904 (14.27%) 60x dots matched to 20x\n",
-      "    308 (70.48% 20x, 34.07% 60x) dots matched with distance > 9\n",
+      "    129/433 (29.79%) 20x dots matched to 60x\n",
+      "    129/901 (14.32%) 60x dots matched to 20x\n",
+      "    304 (70.21% 20x, 33.74% 60x) dots matched with distance > 9\n",
       "    \n"
      ]
     }
@@ -389,9 +388,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6304/14948 (42.17%) 20x dots matched to 60x\n",
-      "6304/9044 (69.70%) 60x dots matched to 20x\n",
-      "2740 (18.33% 20x, 30.30% 60x) dots matched with distance > 9\n"
+      "6304/14944 (42.18%) 20x dots matched to 60x\n",
+      "6304/9043 (69.71%) 60x dots matched to 20x\n",
+      "2739 (18.33% 20x, 30.29% 60x) dots matched with distance > 9\n"
      ]
     }
    ],
