--- a/notebooks/5.0_comparing_magnifications/1.0_20x_dw.matching_reference.global_thr.ipynb
+++ b/notebooks/5.0_comparing_magnifications/1.0_20x_dw.matching_reference.global_thr.ipynb
@@ -135,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 1/7 [00:00<00:02,  2.40it/s]"
+      " 14%|█▍        | 1/7 [00:00<00:02,  2.33it/s]"
      ]
     },
     {
@@ -150,7 +150,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 29%|██▊       | 2/7 [00:01<00:02,  1.88it/s]"
+      " 29%|██▊       | 2/7 [00:01<00:02,  1.87it/s]"
      ]
     },
     {
@@ -158,21 +158,21 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Iteration #...1...2...3...4"
+      "Iteration #...1...2...3...4...5"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|████▎     | 3/7 [00:01<00:01,  2.24it/s]"
+      " 43%|████▎     | 3/7 [00:01<00:01,  2.25it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "...5...6\n",
+      "...6\n",
       "Iteration #...1...2...3...4...5...6...7...8"
      ]
     },
@@ -180,7 +180,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 57%|█████▋    | 4/7 [00:01<00:01,  2.14it/s]"
+      " 57%|█████▋    | 4/7 [00:01<00:01,  2.20it/s]"
      ]
     },
     {
@@ -195,7 +195,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 71%|███████▏  | 5/7 [00:03<00:01,  1.53it/s]"
+      " 71%|███████▏  | 5/7 [00:02<00:01,  1.63it/s]"
      ]
     },
     {
@@ -203,21 +203,36 @@
      "output_type": "stream",
      "text": [
       "...9...10\n",
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14...15...16...17\n"
+      "Iteration #...1"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 7/7 [00:03<00:00,  1.92it/s]"
+      " 86%|████████▌ | 6/7 [00:03<00:00,  2.03it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration #...1...2...3...4...5...6...7...8...9...10...11...12...13...14...15...16...17...18...19...20\n"
+      "...2...3...4...5...6...7...8...9...10...11...12\n",
+      "Iteration #...1...2...3"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7/7 [00:03<00:00,  2.12it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...4...5...6...7...8...9...10...11...12...13...14...15...16...17...18...19...20\n"
      ]
     },
     {
@@ -270,9 +285,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6595/7948 (82.98%) 20x dots matched to 60x\n",
-      "6595/9440 (69.86%) 60x dots matched to 20x\n",
-      "1353 (17.02% 20x, 14.33% 60x) dots matched with distance > 9\n"
+      "6594/7921 (83.25%) 20x dots matched to 60x\n",
+      "6594/9439 (69.86%) 60x dots matched to 20x\n",
+      "1327 (16.75% 20x, 14.06% 60x) dots matched with distance > 9\n"
      ]
     }
    ],
@@ -322,14 +337,14 @@
       "    312 (15.58% 20x, 12.98% 60x) dots matched with distance > 9\n",
       "    \n",
       "Field #6\n",
-      "    415/557 (74.51%) 20x dots matched to 60x\n",
+      "    415/537 (77.28%) 20x dots matched to 60x\n",
       "    415/691 (60.06%) 60x dots matched to 20x\n",
-      "    142 (25.49% 20x, 20.55% 60x) dots matched with distance > 9\n",
+      "    122 (22.72% 20x, 17.66% 60x) dots matched with distance > 9\n",
       "    \n",
       "Field #7\n",
-      "    151/258 (58.53%) 20x dots matched to 60x\n",
-      "    151/523 (28.87%) 60x dots matched to 20x\n",
-      "    107 (41.47% 20x, 20.46% 60x) dots matched with distance > 9\n",
+      "    150/251 (59.76%) 20x dots matched to 60x\n",
+      "    150/522 (28.74%) 60x dots matched to 20x\n",
+      "    101 (40.24% 20x, 19.35% 60x) dots matched with distance > 9\n",
       "    \n"
      ]
     }
@@ -363,9 +378,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6444/7690 (83.80%) 20x dots matched to 60x\n",
+      "6444/7670 (84.02%) 20x dots matched to 60x\n",
       "6444/8917 (72.27%) 60x dots matched to 20x\n",
-      "1246 (16.20% 20x, 13.97% 60x) dots matched with distance > 9\n"
+      "1226 (15.98% 20x, 13.75% 60x) dots matched with distance > 9\n"
      ]
     }
    ],
